craete andpoint report-categoires and fix others
